Generate gradle-kotlin-dsl project with Quarkus 3.31.2